sumo/tests/sumo/output/tripinfo/errors/freq_negative/errors.sumo
Error: Negative sampling frequency (in detector '4/1to3/1').
Quitting (on error).
